--- a/WriteAndReadWebApplicationMVC/Views/Home/Login.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Home/Login.cshtml
@@ -7,9 +7,9 @@
     <h3>@ViewData["Message"]</h3>
     <form method="post" action="/home/Login">
         <label for="login">Login:</label>
-        <input type="text" name="login" class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-6 col-xxl-6"/><br /><br />
+        <input type="text" name="login" class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-6 col-xxl-6" required /><br /><br />
         <label for="password">Hasło:</label>
-        <input type="password" name="password" class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-6 col-xxl-6" /><br /><br />
+        <input type="password" name="password" class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-6 col-xxl-6" required /><br /><br />
         <input type="submit" class="btn btn-primary" value="Zaloguj się" class="col-5 col-sm-5 col-md-4 col-lg-3 col-xl-3 col-xxl-3" />
     </form>
 </div>
