finish writing; tested login, register and user data chenges

--- a/WriteAndReadWebApplicationMVC/Views/Admin/Index.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Admin/Index.cshtml
@@ -26,6 +26,7 @@
 	</form>
 </div>
 <div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
+	<h4 class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">Usuwanie użytkownika</h4><br />
 	<form method="post" action="/Admin/DeleteUser">
 		<label for="userId">Wybierz użytkownika:</label>
 		<select name="userId">
@@ -40,6 +41,7 @@
 	</form>
 </div>
 <div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
+	<h4 class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">Usuwanie użytkownika</h4><br />
 	<form method="post" action="/Admin/CreateBlock">
 		<label for="userId">Wybierz użytkownika:</label>
 		<select name="userId">
