--- a/WriteAndReadWebApplicationMVC/Views/Profile/Index.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Profile/Index.cshtml
@@ -11,11 +11,7 @@
 		<h2>@ViewData["Message"]</h2>
 	}
 	<div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
-		<form method="post" action="/Profile/ChangeLogin">
-			<label for="login" class=" col-6 col-sm-6 col-md-2 col-lg-2 col-xl-2 col-xxl-2">Login:</label>
-			<input type="text" value="@user.login" name="login" class=" col-10 col-sm-10 col-md-8 col-lg-8 col-xl-8 col-xxl-8" /><br /><br />
-			<input type="submit" class="btn btn-primary" class="col-8 col-sm-8 col-md-4 col-lg-4 col-xl-4 col-xxl-4" value="Zapisz zmiany"/>
-		</form>
+		<p>Login: @user.email</p>
 	</div>
 	<div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
 		<p>Email: @user.email</p>
