--- a/WriteAndReadWebApplicationMVC/Views/Shared/_Layout.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                                         <a class="nav-link text-dark text-center" asp-area="" asp-controller="Home" asp-action="Index">Admin</a>
                                     </li>
                                 }
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark text-center" asp-area="" asp-controller="Home" asp-action="Logout">Wyloguj</a>
+                                </li>
                             </ul>
                         } 
                         else
