--- a/WriteAndReadWebApplicationMVC/Views/Profile/Index.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Profile/Index.cshtml
@@ -11,7 +11,7 @@
 		<h2>@ViewData["Message"]</h2>
 	}
 	<div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
-		<p>Login: @user.email</p>
+		<p>Login: @user.login</p>
 	</div>
 	<div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
 		<p>Email: @user.email</p>
