--- a/WriteAndReadWebApplicationMVC/Views/Shared/_Layout.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                                 @if(Accessor.HttpContext.Session.GetString("_IfAdmin") == "True")
                                 {
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark text-center" asp-area="" asp-controller="Home" asp-action="Index">Admin</a>
+                                        <a class="nav-link text-dark text-center" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
                                     </li>
                                 }
                                 <li class="nav-item">
