test and repair - part 2

--- a/WriteAndReadWebApplicationMVC/Views/Admin/Index.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Admin/Index.cshtml
@@ -37,7 +37,8 @@
 </div>
 <div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
 	<h4 class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">Usuwanie użytkownika</h4><br />
-	<form method="post" action="/Admin/DeleteUser">
+	@using (Html.BeginForm("DeleteUser","Admin",FormMethod.Post))
+	{
 		<label for="userId">Wybierz użytkownika:</label>
 		<select name="userIdString">
 			@{
@@ -46,13 +47,15 @@
 					<option value="@user.id">@user.login</option>
 				}
 			}
-		</select><br />
-		<input type="submit" class="btn btn-primary col-10 col-sm-10 col-md-6 col-lg-6 col-xl-6 col-xxl-6" value="Usuń użytkownika"/>
-	</form>
+		</select>
+		<br />
+		<input type="submit" class="btn btn-primary col-10 col-sm-10 col-md-6 col-lg-6 col-xl-6 col-xxl-6" value="Usuń użytkownika" />
+	}
 </div>
 <div class="col-11 col-sm-11 col-md-9 col-lg-9 col-xl-9 col-xxl-9 border-1">
 	<h4 class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">Usuwanie użytkownika</h4><br />
-	<form method="post" action="/Admin/CreateBlock">
+	@using (Html.BeginForm("CreateBlock","Admin",FormMethod.Post))
+	{
 		<label for="userId">Wybierz użytkownika:</label>
 		<select name="userIdString">
 			@{
@@ -61,9 +64,11 @@
 					<option value="@user.id">@user.login</option>
 				}
 			}
-		</select><br />
+		</select>
+		<br />
 		<label for="endTime">Kiedy skończyć blokadę:</label>
-		<input type="datetime-local" name="endTimeString"/><br />
-		<input type="submit" class="btn btn-primary col-10 col-sm-10 col-md-6 col-lg-6 col-xl-6 col-xxl-6" value="Stwórz blokadę"/>
-	</form>
+		<input type="datetime-local" name="endTimeString" />
+		<br />
+		<input type="submit" class="btn btn-primary col-10 col-sm-10 col-md-6 col-lg-6 col-xl-6 col-xxl-6" value="Stwórz blokadę" />
+	}
 </div>
