--- a/WriteAndReadWebApplicationMVC/Views/Write/CreateChapter.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Write/CreateChapter.cshtml
@@ -14,7 +14,7 @@
 				<label>Miejsce w książce:</label>
 				<input name="orderInBook" required type="number" value="@chapter.orderInBook"/><br />
 				<label>Rozdział: </label><br />
-				<textarea name="content" required>@chapter.content</textarea>
+				<textarea name="content" required>@chapter.content</textarea><br />
 				<input type="submit" class="btn btn-primary" value="Edytuj rozdział" />
 			</form>
 		</div>
@@ -28,7 +28,7 @@
 				<label>Miejsce w książce:</label>
 				<input name="orderInBook" required type="number" /><br />
 				<label>Rozdział: </label><br />
-				<textarea name="content" required></textarea>
+				<textarea name="content" required></textarea><br />
 				<input type="submit" class="btn btn-primary" value="Stwórz rozdział" />
 			</form>
 		</div>
