--- a/WriteAndReadWebApplicationMVC/Views/Write/MyBookDetails.cshtml
+++ b/WriteAndReadWebApplicationMVC/Views/Write/MyBookDetails.cshtml
@@ -9,10 +9,12 @@
 	<h6>Data stworzenia: @book.createDate</h6>
 	<h6>Data aktualizacji: @book.updateDate</h6>
 	<p>@book.description</p>
-	<a class="btn btn-success col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12" asp-controller="write" asp-action="CreateBook" asp-route-bookId="@book.id">Edytuj książkę</a>
-	foreach (Chapter chapter in book.chapters)
+	<a class="btn btn-success col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12" asp-controller="write" asp-action="EditBook" asp-route-bookId="@book.id">Edytuj książkę</a>
+	string chapterString = ViewData["Chapters"].ToString();
+	List<Chapter> chapters = JsonSerializer.Deserialize<List<Chapter>>(chapterString);
+	foreach (Chapter chapter in chapters)
 	{
-		<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">Tytuł:<a asp-controller="write" asp-action="CreateChapter" asp-route-chapterId="@chapter.id">@chapter.title</a></div>
+		<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">Tytuł:<a asp-controller="write" asp-action="EditChapter" asp-route-chapterId="@chapter.id">@chapter.title</a></div>
 		<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">Data utworzenia: @chapter.createTime</div>
 		<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">Data zaktualizowania: @chapter.updateTime</div>
 		<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">Licznik unikalnych czytelników: @chapter.uniqueReadCounter</div>
